# rust_daily

./: Cargo.toml  README.md
src/: main.rs  same_dir.rs
src/dir1/: dir1_file1.rs  mod.rs
src/dir2/: dir2_hashmap.rs  dir2_http.rs  mod.rs
src/mem_man/: mm_macro.rs  mod.rs
src/trait_practise/: tp.rs
