[package]
name = "rust_daily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#http start
anyhow = "1.0.57" # 错误处理
clap = { version = "3.1.18", features = ["derive"] } # 命令行解析
colored = "2.0.0" # 命令终端多彩显示
jsonxf = "1.1.1" # JSON pretty print 格式化
mime = "0.3.16" # 处理 mime 类型
reqwest = { version = "0.11.10", features = ["json"] } # HTTP 客户端
tokio = { version = "1.19.1", features = ["full"] } # 异步处理库
#http end


#trait practise start
lazy_static = "1.4.0"
#trait practise end
